--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
+* {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +8,141 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  width: 100%;
+  background-color: #333;
+}
+
+.content {
+  padding-top: 30px;
+}
+
+.contentFather {
+  background-color: #F1E4E6;
+  height: 755px;
+}
+
+.header__container {
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 15px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.content {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.todos__father {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+.todo {
+  width: 300px;
+  /* height: 300px; */
+  border: 1px solid #000;
+  padding: 15px;
+  border-radius: 10px;
+  padding-bottom: 70px;
+  padding-top: 30px;
+  margin-bottom: 40px;
+}
+
+h1 {
+  color: antiquewhite;
+}
+
+h2 {
+  text-align: center;
+  padding-top: 20px;
+}
+
+h3 {
+  margin-bottom: 5px;
+}
+
+ul {
+  padding: 10px;
+  max-width: 260px;
+}
+
+li {
+  margin: 5px 0;
+}
+
+.link {
+  font-size: 22px;
+  color: antiquewhite;
+  text-decoration: none;
+  align-items: center;
+}
+
+.link:not(:last-child) {
+  margin-right: 10px;
+}
+
+.create__container {
+  max-width: 400px;
+  /* height: 400px; */
+  margin: 0 auto;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 0 10px;
+  padding-bottom: 30px;
+}
+
+h3 {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.inputs {
+  max-width: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+input {
+  margin: 5px 0;
+  outline: none;
+}
+
+.inputs__two {
+  max-width: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons {
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+
+.hhj {
+  height: 400px;
+}
+
+.linkMore {
+  text-decoration: none;
+}
+
+
+.more__container {
+  max-width: 400px;
+  margin: 0 auto;padding: 30px;
+  /* background-color: aquamarine; */
+  border: 1px solid #000;
+  border-radius: 5px;
 }
