--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,16 @@ input {
   border: 1px solid #000;
   border-radius: 5px;
 }
+
+.change__container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 30px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+.btnChange {
+  display: flex;
+  justify-content: center;
+}
